--- a/.config/polybar/forest/modules.ini
+++ b/.config/polybar/forest/modules.ini
@@ -634,7 +634,7 @@ format-prefix-foreground = ${color.blue}
 ;   %gb_swap_free%
 ;   %gb_swap_used%
 
-label = " %mb_used%"
+label = " %percentage_used%%"
 
 ; Only applies if <ramp-used> is used
 ;;ramp-used-0 = ${memory.used0}
@@ -755,7 +755,7 @@ interface = eth0
 
 [module/wireless-network]
 type = internal/network
-interface = wlp3s0
+interface = wlp4s0
 
 ; Normal Module
 [module/network]
