--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -169,6 +169,10 @@ mark-ovredir-focused = true;
 use-ewmh-active-win = true;
 # Detect rounded corners and treat them as rectangular when --shadow-ignore-shaped is on.
 detect-rounded-corners = true;
+corner-radius = 16;
+rounded-corners-exclude = [
+  "!name= 'Dunst'"  
+];
 
 # Detect _NET_WM_OPACITY on client windows, useful for window managers not passing _NET_WM_OPACITY of client windows to frame windows.
 # This prevents opacity being ignored for some apps.
@@ -209,11 +213,9 @@ detect-client-leader = true;
 
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.9; focus = true;};
+  tooltip = { fade = true; shadow = true; focus = true;};
   dock = { shadow = false; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 0.9; }
-  dropdown_menu = { opacity = 0.9; }
 };
 
 ######################
