--- a/.config/i3/config
+++ b/.config/i3/config
@@ -43,7 +43,7 @@ bindsym $mod+d exec --no-startup-id ~/.config/polybar/forest/scripts/launcher.sh
  bindsym XF86MonBrightnessDown exec "light -U 10"
 
 # Start Applications
-bindsym Print exec --no-startup-id scrot
+bindsym Print exec --no-startup-id scrot -e 'notify-send "Screenshot to $f"'
 bindsym $mod+Print --release exec --no-startup-id scrot -w
 bindsym $mod+Shift+Print --release exec --no-startup-id scrot -s
 
@@ -60,9 +60,9 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # workspace back and forth (with/without active container)
-workspace_auto_back_and_forth yes
-bindsym $mod+b workspace back_and_forth
-bindsym $mod+Shift+b move container to workspace back_and_forth; workspace back_and_forth
+# workspace_auto_back_and_forth yes
+# bindsym $mod+b workspace back_and_forth
+# bindsym $mod+Shift+b move container to workspace back_and_forth; workspace back_and_forth
 
 # split orientation
 bindsym $mod+h split h;exec notify-send 'tile horizontally'
@@ -227,6 +227,9 @@ bindsym $mod+l exec --no-startup-id dm-tool lock
 
 # Explorer
 bindsym $mod+e exec thunar
+
+# Browser
+bindsym $mod+b exec brave-browser
 
 # Autostart applications
 exec --no-startup-id nitrogen --restore; 
