--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -56,15 +56,15 @@ glx-copy-from-front = false;
 #################################
 
 # Enabled client-side shadows on windows.
-shadow = false;
+shadow = true;
 # The blur radius for shadows. (default 12)
-shadow-radius = 32;
+shadow-radius = 128;
 # The left offset for shadows. (default -15)
-shadow-offset-x = -32;
+shadow-offset-x = -128;
 # The top offset for shadows. (default -15)
-shadow-offset-y = -32;
+shadow-offset-y = -128;
 # The translucency for shadows. (default .75)
-shadow-opacity = 1.0;
+shadow-opacity = 0.5;
 
 log-level = "warn";
 #change your username here
@@ -79,28 +79,7 @@ log-level = "warn";
 # (most applications are fine, only apps that do weird things with xshapes or argb are affected).
 # This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
 shadow-exclude = [
-    "name = 'Notification'",
-    "name = 'Plank'",
-    "name = 'Docky'",
-    "name = 'Kupfer'",
-    "name = 'xfce4-notifyd'",
-    "name *= 'VLC'",
-    "name *= 'compton'",
-    "name *= 'picom'",
-    "name *= 'Chromium'",
-    "name *= 'Chrome'",
-    "name *= 'Brave'",
-    "class_g = 'Firefox' && argb",
-    "class_g = 'Conky'",
-    "class_g = 'Kupfer'",
-    "class_g = 'Synapse'",
-    "class_g ?= 'Notify-osd'",
-    "class_g ?= 'Cairo-dock'",
-    "class_g = 'Cairo-clock'",
-    "class_g ?= 'Xfce4-notifyd'",
-    "class_g ?= 'Xfce4-power-manager'",
-    "_GTK_FRAME_EXTENTS@:c",
-    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+    "!name ^= 'rofi'",
 ];
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
 shadow-ignore-shaped = false;
