Add power menu to polybar

--- a/.config/polybar/forest/config.ini
+++ b/.config/polybar/forest/config.ini
@@ -141,7 +141,7 @@ font-2 = "feather:size=10;5"
 
 modules-left = title
 modules-center = workspaces
-modules-right = cpu memory sep network sep volume brightness sep date
+modules-right = cpu memory sep network sep volume brightness sep date sep powermenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
