--- a/.config/polybar/forest/user_modules.ini
+++ b/.config/polybar/forest/user_modules.ini
@@ -146,7 +146,7 @@ type = custom/menu
 
 ; If true, <label-toggle> will be to the left of the menu items (default).
 ; If false, it will be on the right of all the items.
-expand-right = true
+expand-right = false
 
 ; "menu-LEVEL-N" has the same properties as "label-NAME" with
 ; the additional "exec" property
@@ -155,20 +155,10 @@ expand-right = true
 ;   menu-open-LEVEL
 ;   menu-close
 ; Other commands will be executed using "/usr/bin/env sh -c $COMMAND"
-menu-0-0 = " Reboot |"
-menu-0-0-exec = menu-open-1
-menu-0-1 = " Shutdown "
-menu-0-1-exec = menu-open-2
-
-menu-1-0 = " Back |"
-menu-1-0-exec = menu-open-0
-menu-1-1 = " Reboot "
-menu-1-1-exec = systemctl reboot
-
-menu-2-0 = " Shutdown |"
-menu-2-0-exec = systemctl poweroff
-menu-2-1 = " Back "
-menu-2-1-exec = menu-open-0
+menu-0-0 = "[Reboot]"
+menu-0-0-exec = systemctl reboot
+menu-0-1 = "[Shutdown]"
+menu-0-1-exec = systemctl poweroff
 
 ; Available tags:
 ;   <label-toggle> (default) - gets replaced with <label-(open|close)>
@@ -176,18 +166,19 @@ menu-2-1-exec = menu-open-0
 ; Note that if you use <label-toggle> you must also include
 ; the definition for <label-open>
 
-format = <label-toggle><menu>
+format = <menu><label-toggle>
 
 label-open = 
 label-open-foreground = ${color.cyan}
-label-open-padding = 1
+label-open-padding = 0
+
 label-close =  
 label-close-foreground = ${color.red}
-label-close-padding = 1
+label-close-padding = 0
 
 ; Optional item separator
 ; Default: none
-;label-separator = " | "
+label-separator = "  "
 ;label-separator-foreground = ${color.foreground}
 ;label-separator-background = ${color.background-alt}
 
