--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -64,7 +64,7 @@ shadow-offset-x = -128;
 # The top offset for shadows. (default -15)
 shadow-offset-y = -128;
 # The translucency for shadows. (default .75)
-shadow-opacity = 0.5;
+shadow-opacity = 0.3;
 
 log-level = "warn";
 #change your username here
@@ -79,7 +79,7 @@ log-level = "warn";
 # (most applications are fine, only apps that do weird things with xshapes or argb are affected).
 # This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
 shadow-exclude = [
-    "!name ^= 'rofi'",
+    "!name ~= '^(Dunst|rofi)'",
 ];
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
 shadow-ignore-shaped = false;
@@ -150,7 +150,7 @@ use-ewmh-active-win = true;
 detect-rounded-corners = true;
 corner-radius = 16;
 rounded-corners-exclude = [
-  "!name= 'Dunst'"  
+  "!name~='^(Dunst|rofi)'"  
 ];
 
 # Detect _NET_WM_OPACITY on client windows, useful for window managers not passing _NET_WM_OPACITY of client windows to frame windows.
