Remove broken symlinks

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -265,6 +265,9 @@ set_from_resource	$color15	color15
 # Polybar launch script (located ~/.config/polybar/launch.sh) 
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh --forest
 
+# Annoying volume fix
+exec sleep 1; i3-msg restart
+
 # Theme colors
 # class                 border  	backgr. 	text    	indic.  	child_border
 # My colors
