Latest (scratch terminal, etc)

--- a/.config/polybar/forest/config.ini
+++ b/.config/polybar/forest/config.ini
@@ -139,7 +139,7 @@ font-2 = "feather:size=10;5"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = title
+modules-left = tray title
 modules-center = workspaces
 modules-right = cpu memory sep network sep volume brightness sep date sep powermenu
 
@@ -170,7 +170,7 @@ locale =
 ;   center
 ;   right
 ;   none
-tray-position = none
+tray-position = left
 
 ; If true, the bar will not shift its
 ; contents when the tray changes
@@ -292,3 +292,4 @@ compositing-border = over
 pseudo-transparency = false
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
