--- a/.config/i3/config
+++ b/.config/i3/config
@@ -89,11 +89,15 @@ bindsym $mod+Shift+s sticky toggle
 bindsym $mod+a focus parent
 
 # move the currently focused window to the scratchpad
-bindsym $mod+Shift+minus move scratchpad
+# bindsym $mod+Shift+minus move scratchpad
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
-bindsym $mod+F9 scratchpad show
+# bindsym $mod+F9 scratchpad show
+
+exec --no-startup-id xfce4-terminal --role=scratchterm &
+bindsym $mod+t [window_role="scratchterm"] scratchpad show, move position center
+for_window [window_role="scratchterm"] floating enable, resize set 1920 1080, move scratchpad, border pixel 2
 
 #navigate workspaces next / previous
 bindsym $mod+Ctrl+Right workspace next
@@ -304,3 +308,5 @@ gaps inner 4
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% # Increase
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% # Decrease
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # Mute
+
+#
