--- a/.config/polybar/forest/modules.ini
+++ b/.config/polybar/forest/modules.ini
@@ -1003,7 +1003,7 @@ format-foreground = ${color.foreground}
 ;   %title%
 ; Default: %title%
 label = "%title%"
-; label-maxlen = 30
+label-maxlen = 128
 
 ; Used instead of label when there is no window title
 label-empty = "Desktop"
