--- a/.config/i3/config
+++ b/.config/i3/config
@@ -91,14 +91,6 @@ bindsym $mod+a focus parent
 # move the currently focused window to the scratchpad
 # bindsym $mod+Shift+minus move scratchpad
 
-# Show the next scratchpad window or hide the focused scratchpad window.
-# If there are multiple scratchpad windows, this command cycles through them.
-# bindsym $mod+F9 scratchpad show
-
-exec --no-startup-id xfce4-terminal --role=scratchterm &
-bindsym $mod+t [window_role="scratchterm"] scratchpad show, move position center
-for_window [window_role="scratchterm"] floating enable, resize set 1920 1080, move scratchpad, border pixel 2
-
 #navigate workspaces next / previous
 bindsym $mod+Ctrl+Right workspace next
 bindsym $mod+Ctrl+Left workspace prev
@@ -271,6 +263,14 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh --forest
 
 # Annoying volume fix
 exec sleep 1; i3-msg restart
+
+# Show the next scratchpad window or hide the focused scratchpad window.
+# If there are multiple scratchpad windows, this command cycles through them.
+# bindsym $mod+F9 scratchpad show
+
+bindsym $mod+t [window_role="scratchterm"] scratchpad show, move position center
+for_window [window_role="scratchterm"] floating enable, resize set 1920 1080, move scratchpad, border pixel 2
+exec --no-startup-id sleep 1; xfce4-terminal --role=scratchterm &
 
 # Theme colors
 # class                 border  	backgr. 	text    	indic.  	child_border
