--- a/.config/polybar/forest/modules.ini
+++ b/.config/polybar/forest/modules.ini
@@ -375,14 +375,14 @@ interval = 1.0
 
 ; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
 ; NOTE: if you want to use syntax tags here you need to use %%{...}
-date = %A, %d %B
+date = %d %b
 
 ; Optional time format
 time = %I:%M %p
 
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
-date-alt = It's %A, %d %B %Y
+date-alt = %A, %d %B %Y
 time-alt = %k:%M:%S
 
 ; Available tags:
@@ -760,7 +760,7 @@ interface = wlp4s0
 ; Normal Module
 [module/network]
 type = internal/network
-interface = wlp4s0
+interface = wlp1s0
 
 ; Seconds to sleep between updates
 ; Default: 1
@@ -790,15 +790,15 @@ unknown-as-up = true
 ; Available tags:
 ;   <label-connected> (default)
 ;   <ramp-signal>
-format-connected = <label-connected>
-format-connected-prefix = 
-format-connected-prefix-foreground = ${color.purple}
+; format-connected = <label-connected>
+; format-connected-prefix = 
+; format-connected-prefix-foreground = ${color.purple}
 
 ; Available tags:
 ;   <label-disconnected> (default)
-format-disconnected = <label-disconnected>
-format-disconnected-prefix = 
-format-disconnected-prefix-foreground = ${color.orange}
+; format-disconnected = <label-disconnected>
+; format-disconnected-prefix = 
+; format-disconnected-prefix-foreground = ${color.orange}
 
 ; Available tags:
 ;   <label-connected> (default)
@@ -816,7 +816,8 @@ format-disconnected-prefix-foreground = ${color.orange}
 ;   %downspeed% [wireless+wired]
 ;   %linkspeed% [wired]
 ; Default: %ifname% %local_ip%
-label-connected = "%{A1:networkmanager_dmenu &:} %essid% %{F#6C77BB}%{F-} %downspeed%%{A}"
+label-connected = "%{F#6C77BB}%{F-} %downspeed%%{A}  %{F#6C77BB}%{F-} %upspeed%%{A}"
+
 
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
@@ -1088,3 +1089,7 @@ label-occupied-padding = 1
 label-empty-padding = 1
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/tray]
+type = internal/tray
+format = <tray>
