--- a/.config/polybar/forest/config.ini
+++ b/.config/polybar/forest/config.ini
@@ -61,7 +61,7 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 50
+height = 28
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -130,18 +130,18 @@ module-margin-right = 1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Iosevka Nerd Font:size=9;5"
-font-1 = "Iosevka Nerd Font:size=9;4"
-font-2 = "feather:size=10;5"
+font-0 = "Iosevka Nerd Font:size=9;3"
+font-1 = "Iosevka Nerd Font:size=10;2"
+font-2 = "feather:size=11;3"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = tray title
-modules-center = workspaces
-modules-right = cpu memory sep network sep volume brightness sep date sep powermenu
+modules-left = workspaces sep title
+modules-center = 
+modules-right = battery cpu memory sep network sep volume brightness sep date sep tray sep powermenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -208,7 +208,7 @@ tray-scale = 1.0
 
 ; Set a DPI values used when rendering text
 ; This only affects scalable fonts
-dpi = 192
+; dpi = 192
 
 ; Enable support for inter-process messaging
 ; See the Messaging wiki page for more details.
