--- a/.config/polybar/forest/config.ini
+++ b/.config/polybar/forest/config.ini
@@ -141,7 +141,7 @@ font-2 = "feather:size=11;3"
 
 modules-left = workspaces sep title
 modules-center = 
-modules-right = battery cpu memory sep network sep volume brightness sep date sep tray sep powermenu
+modules-right = battery temperature cpu memory sep network sep volume brightness sep date sep tray sep powermenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
