--- a/.config/polybar/forest/modules.ini
+++ b/.config/polybar/forest/modules.ini
@@ -917,11 +917,13 @@ thermal-zone = 0
 ; to find path to desired file
 ; Default reverts to thermal zone setting
 ;;hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
-hwmon-path = /sys/devices/pci0000:00/0000:00:01.3/0000:01:00.0/hwmon/hwmon0/temp1_input
+hwmon-path = /sys/class/thermal/thermal_zone0/hwmon1/temp1_input
+
+base-temperature = 20
 
 ; Threshold temperature to display warning label (in degrees celsius)
 ; Default: 80
-warn-temperature = 65
+warn-temperature = 80
 
 ; Whether or not to show units next to the temperature tokens (°C, °F)
 ; Default: true
@@ -953,11 +955,11 @@ label-warn-foreground = ${color.red}
 ; Requires the <ramp> tag
 ; The icon selection will range from 0 to `warn-temperature`
 ; with the current temperature as index.
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
+ramp-0 = %{F#4DD0E1}%{F-}
+ramp-1 = %{F#61C766}%{F-}
+ramp-2 = %{F#FDD835}%{F-}
+ramp-3 = %{F#E57C46}%{F-}
+ramp-4 = %{F#EC7875}%{F-}
 ramp-foreground = ${color.cyan}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
