--- a/.config/i3/config
+++ b/.config/i3/config
@@ -12,10 +12,6 @@ set $mod Mod4
 # set default desktop layout (default is tiling)
 # workspace_layout tabbed <stacking|tabbed>
 
-# Configure border style <normal|1pixel|pixel xx|none|pixel>
-new_window pixel 2
-new_float pixel 2
-
 # Hide borders
 hide_edge_borders none
 
@@ -194,30 +190,6 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
-# Resize window (you can also use the mouse for that)
-bindsym $mod+r mode "resize"
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 5 px or 5 ppt
-        bindsym k resize grow height 5 px or 5 ppt
-        bindsym l resize shrink height 5 px or 5 ppt
-        bindsym odiaeresis resize grow width 5 px or 5 ppt
-
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 8 px or 8 ppt
-        bindsym Down resize grow height 8 px or 8 ppt
-        bindsym Up resize shrink height 8 px or 8 ppt
-        bindsym Right resize grow width 8 px or 8 ppt
-
-        # exit resize mode: Enter or Escape
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-}
-
 # Lock screen
 bindsym $mod+l exec --no-startup-id dm-tool lock
 
@@ -240,24 +212,24 @@ exec --no-startup-id xautolock -time 30 -locker dm-tool lock
 # exec_always --no-startup-id fix_xcursor
 
 # Colors set from ~/.Xresources
-set_from_resource	$background	background
-set_from_resource	$foreground	foreground
-set_from_resource	$color0		color0
-set_from_resource 	$color1 	color1
-set_from_resource 	$color2 	color2
-set_from_resource 	$color3 	color3
-set_from_resource 	$color4 	color4
-set_from_resource 	$color5 	color5
-set_from_resource 	$color6		color6
-set_from_resource	$color7		color7
-set_from_resource	$color8		color8
-set_from_resource	$color9		color9
-set_from_resource	$color10	color10
-set_from_resource	$color11	color11
-set_from_resource	$color12	color12
-set_from_resource	$color13	color13
-set_from_resource	$color14	color14
-set_from_resource	$color15	color15
+#set_from_resource	$background	background
+#set_from_resource	$foreground	foreground
+#set_from_resource	$color0		color0
+#set_from_resource 	$color1 	color1
+#set_from_resource 	$color2 	color2
+#set_from_resource 	$color3 	color3
+#set_from_resource 	$color4 	color4
+#set_from_resource 	$color5 	color5
+#set_from_resource 	$color6		color6
+#set_from_resource	$color7		color7
+#set_from_resource	$color8		color8
+#set_from_resource	$color9		color9
+#set_from_resource	$color10	color10
+#set_from_resource	$color11	color11
+#set_from_resource	$color12	color12
+#set_from_resource	$color13	color13
+#set_from_resource	$color14	color14
+#set_from_resource	$color15	color15
 
 # Polybar launch script (located ~/.config/polybar/launch.sh) 
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh --forest
@@ -277,13 +249,13 @@ exec --no-startup-id sleep 1; xfce4-terminal --role=scratchterm &
 # Theme colors
 # class                 border  	backgr. 	text    	indic.  	child_border
 # My colors
-client.background	$background
+#client.background	$background
 
-client.focused         	$foreground	$background	$foreground	$background		$background	
-client.unfocused       	$foreground	$background	$foreground	$background		$background
-client.focused_inactive	$foreground	$background	$foreground	$background		$background
-client.urgent		        $foreground	$background	$foreground	$background		$background
-client.placeholder	    $foreground	$background	$foreground	$background		$background
+#client.focused         	$foreground	$background	$foreground	$background		$background	
+#client.unfocused       	$foreground	$background	$foreground	$background		$background
+#client.focused_inactive	$foreground	$background	$foreground	$background		$background
+#client.urgent		        $foreground	$background	$foreground	$background		$background
+#client.placeholder	    $foreground	$background	$foreground	$background		$background
 
 
 #############################
