--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,6 +14,8 @@ set $mod Mod4
 
 # Hide borders
 hide_edge_borders none
+new_window pixel 2
+new_float pixel 2
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -212,24 +214,24 @@ exec --no-startup-id xautolock -time 30 -locker dm-tool lock
 # exec_always --no-startup-id fix_xcursor
 
 # Colors set from ~/.Xresources
-#set_from_resource	$background	background
-#set_from_resource	$foreground	foreground
-#set_from_resource	$color0		color0
-#set_from_resource 	$color1 	color1
-#set_from_resource 	$color2 	color2
-#set_from_resource 	$color3 	color3
-#set_from_resource 	$color4 	color4
-#set_from_resource 	$color5 	color5
-#set_from_resource 	$color6		color6
-#set_from_resource	$color7		color7
-#set_from_resource	$color8		color8
-#set_from_resource	$color9		color9
-#set_from_resource	$color10	color10
-#set_from_resource	$color11	color11
-#set_from_resource	$color12	color12
-#set_from_resource	$color13	color13
-#set_from_resource	$color14	color14
-#set_from_resource	$color15	color15
+set_from_resource	$background	background
+set_from_resource	$foreground	foreground
+set_from_resource	$color0		color0
+set_from_resource 	$color1 	color1
+set_from_resource 	$color2 	color2
+set_from_resource 	$color3 	color3
+set_from_resource 	$color4 	color4
+set_from_resource 	$color5 	color5
+set_from_resource 	$color6		color6
+set_from_resource	$color7		color7
+set_from_resource	$color8		color8
+set_from_resource	$color9		color9
+set_from_resource	$color10	color10
+set_from_resource	$color11	color11
+set_from_resource	$color12	color12
+set_from_resource	$color13	color13
+set_from_resource	$color14	color14
+set_from_resource	$color15	color15
 
 # Polybar launch script (located ~/.config/polybar/launch.sh) 
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh --forest
@@ -251,11 +253,11 @@ exec --no-startup-id sleep 1; xfce4-terminal --role=scratchterm &
 # My colors
 #client.background	$background
 
-#client.focused         	$foreground	$background	$foreground	$background		$background	
-#client.unfocused       	$foreground	$background	$foreground	$background		$background
-#client.focused_inactive	$foreground	$background	$foreground	$background		$background
-#client.urgent		        $foreground	$background	$foreground	$background		$background
-#client.placeholder	    $foreground	$background	$foreground	$background		$background
+client.focused         	$foreground	$background	$foreground	$background		$background	
+client.unfocused       	$foreground	$background	$foreground	$background		$background
+client.focused_inactive	$foreground	$background	$foreground	$background		$background
+client.urgent		        $foreground	$background	$foreground	$background		$background
+client.placeholder	    $foreground	$background	$foreground	$background		$background
 
 
 #############################
