--- a/.config/i3/config
+++ b/.config/i3/config
@@ -244,6 +244,7 @@ exec sleep 1; i3-msg restart
 # If there are multiple scratchpad windows, this command cycles through them.
 # bindsym $mod+F9 scratchpad show
 
+for_window [class="Emulator"] floating enable
 bindsym $mod+t [window_role="scratchterm"] scratchpad show, move position center
 for_window [window_role="scratchterm"] floating enable, resize set 960 600, move scratchpad, border pixel 2
 exec --no-startup-id sleep 1; xfce4-terminal --role=scratchterm &
