--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -79,7 +79,7 @@ log-level = "warn";
 # (most applications are fine, only apps that do weird things with xshapes or argb are affected).
 # This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
 shadow-exclude = [
-    "!name ~= '^(Dunst|rofi)'",
+  "!name ~= '^(Dunst|rofi)'",
 ];
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
 shadow-ignore-shaped = false;
@@ -111,6 +111,7 @@ blur-background-exclude = [
 #    "window_type = 'dock'",
 #    "window_type = 'desktop'",
 #    "_GTK_FRAME_EXTENTS@:c"
+  "!name ~= '^(Dunst|rofi|Terminal)'",
 ];
 
 #################################
@@ -206,3 +207,5 @@ wintypes:
 
 # Use X Sync fence to sync clients' draw calls. Needed on nvidia-drivers with GLX backend for some users.
 xrender-sync-fence = true;
+
+
