--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -111,7 +111,8 @@ blur-background-exclude = [
 #    "window_type = 'dock'",
 #    "window_type = 'desktop'",
 #    "_GTK_FRAME_EXTENTS@:c"
-  "!name ~= '^(Dunst|rofi|Terminal)'",
+  #"!name ~= '^(Dunst|rofi|Terminal|polybar)'",
+  "!class_i ~= '(polybar|xfce4-terminal|rofi|Dunst)'",
 ];
 
 #################################
